@@ -32,6 +32,8 @@ selection method.
 
 __revision__ = "__FILE__ __REVISION__ __DATE__ __DEVELOPER__"
 
+import SCons.Util
+
 import cc
 
 def generate(env):
@@ -41,7 +43,10 @@ def generate(env):
     """
     cc.generate(env)
 
-    env['CXX']        = 'CC'
+    env['CXX']          = 'CC'
+    env['SHCCFLAGS']    = SCons.Util.CLVar('$CCFLAGS -KPIC')
+    env['SHOBJPREFIX']  = 'so_'
+    env['SHOBJSUFFIX']  = '.o'
 
 def exists(env):
     return env.Detect('CC')
