@@ -318,6 +318,9 @@ RELEASE 0.97 - XXX
   - Add the 'f90' and 'f95' tools to the list of Fortran compilers
     searched for by default.
 
+  - Add the +Z option by default when compiling shared objects on
+    HP-UX.
+
   From Chen Lee:
 
   - Handle Visual Studio project and solution files in Unicode.
@@ -606,6 +609,15 @@ RELEASE 0.97 - XXX
   From Levi Stephen:
 
   - Allow $JARCHDIR to be expanded to other construction variables.
+
+  From Steve-o:
+
+  - Add the -KPIC option by default when compiling shared objects on
+    Solaris.
+
+  - Change the default suffix for Solaris objects to .o, to conform to
+    Sun WorkShop's expectations.  Change the profix to so_ so they can
+    still be differentiated from static objects in the same directory.
 
   From Amir Szekely:
 
